# ChangeLog for media-video/tosvcd
# Copyright 2003 Henning Ryll; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/tosvcd/ChangeLog,v 1.2 2003/03/28 17:23:30 mad Exp $

*tosvcd-0.90-r1 (28 March 2003)
  28 March 2003; M.Hierling <mad@cc.fh-lippe.de> tosvcd-0.90-r1.ebuild
  fixed installissue (cp in makefile)

*tosvcd.0.90 (05 March 2003)
  initial

  05 March 2003; H.Ryll <henning.ryll@web.de> ChangeLog :

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that
  the comments should well explained and written in clean English. The
  details about writing correct changelogs are explained in the
  skel.ChangeLog file which you can find in the root directory of the
  portage repository.